engine-net-2/examples/Errors/MatchClassError.grs
new graph "Rules.grg"

eval [?[t]\<class mcc>]

quit
